fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -613,7 +613,7 @@ body {
 
 .contact-description {
 	text-align: center;
-	width: 28em;
+	width: 24em;
 	margin-bottom: 3em;
 	padding-left: 2em;
 	padding-right: 2em;
